R1.2.0         April 6, 2020   Kukhee Kim
                  - Implement a graceful shutdown

R1.1.0         Mar 11, 2020    Kukhee Kim
                  -  re-arrange attenuator index to reflect front pannel order

R1.0.0         Jan 29, 2020    Kukhee Kim
                  - build with yamlLoader R2.1.0, cpsw/framework R4.4.1, commonRF R1.0.0 and buildroot-2019.08


RFCommon-git:  Nov. 5, 2019    Kukhee Kim
           - initial import into GIT-repo