@@ -1,3 +1,7 @@
+R1.3.0         June 4, 2020    Kukhee Kim
+                  - implement max hold and reset for Demod
+                  - build with commonRF R1.1.0
+
 R1.2.0         April 6, 2020   Kukhee Kim
                   - Implement a graceful shutdown
 
